--- a/prob2_2025/contabs.html
+++ b/prob2_2025/contabs.html
@@ -292,7 +292,12 @@ name="Problem set 1">Problem set 1</a></h2>
 ::<p>
 <b>EXERCISE 5:</b>&nbsp;<font size="-2">[rosspdf5.png]</font><img width="" src="image/rosspdf5.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 6:</b>&nbsp;<font size="-2">[rosspdf21.png]</font><img width="" src="image/rosspdf21.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 6:</b>&nbsp;<font size="-2">[rosspdf21.png]</font><img width="" src="image/rosspdf21.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
+class="ans" id="lab1">Use integration by parts (twice). Also you need to know this fact: $\int_0^\infty e^{-x^2/2}\, dx = \sqrt{\frac \pi2}.$</div></p>
+
+</p>
 
 <p></p>
 ::<p>
@@ -592,8 +597,8 @@ name="Problem set 5">Problem set 5</a></h2>
 If $f,g:{\mathbb R}\rightarrow{\mathbb R}$  are two functions such that $\forall a\leq b~~\int_a^b f(x)\, dx = \int_a^b g(x)\, dx,$  and
  they are both continuous at $x=c,$   then show that $f(c)=g(c).$  
 <p><a
-href="javascript:hideShow('lab1')"><b>[Hint]</b></a><div
-class="ans" id="lab1">
+href="javascript:hideShow('lab2')"><b>[Hint]</b></a><div
+class="ans" id="lab2">
 Let, if possible,  $f(c)\neq g(c).$  Without loss of generality $f(c)&lt; g(c),$  say. 
 <p></p>
 Consider $h(x) = g(x)-h(x).$
