--- a/prob2_2025/contabs.html
+++ b/prob2_2025/contabs.html
@@ -606,7 +606,7 @@ Consider $h(x) = g(x)-h(x).$
 Then $h$  is continuous at $c$  and $h(c)&gt;0.$  
 <p></p>
 Note that it is enough to show that
-$$\exists \delta&gt;0~~\int_{a-\delta}^{a+\delta} h(x)\, dx&gt;0.\hspace{1in} \mbox{*}$$
+$$\exists \delta&gt;0~~\int_{a-\delta}^{a+\delta} h(x)\, dx&gt;0.\hspace{1in} \mbox{(*)}$$
 <blockquote><a
 href="javascript:hideShow('reason3')"><b>[Because...]</b></a><div
 class="ans" id="reason3"> 
