--- a/prob2_2025/proj.html
+++ b/prob2_2025/proj.html
@@ -222,8 +222,11 @@ Let $\epsilon&gt;0.$  Then we can find random variables $S,T$  such that
 </ol>
 
 </fieldset>
-In plain words, this means data from perfectly dependent variables are indistinguishable from the
- data from independent variables!!!
+In plain words, this means: If you choose $\epsilon$  to be the smallest positive number your
+ computer can hold (<i>e.g.</i> $2^{-31},$  then  no program running in that computer will be able
+ to distinguish data from
+the  perfectly dependent variables $S,T$   from 
+ data from independent variables, $X,Y$!!!
 <p></p>
  This surprising theorem has a constructive proof. Indeed, you can write a simple program to actually manufacture data from
  $(S,T)$  to see the counter-intuitive behaviour for yourself! The project is to explore the proof. 
