--- a/prob2_2025/proj.html
+++ b/prob2_2025/proj.html
@@ -223,7 +223,7 @@ Let $\epsilon&gt;0.$  Then we can find random variables $S,T$  such that
 
 </fieldset>
 In plain words, this means: If you choose $\epsilon$  to be the smallest positive number your
- computer can hold (<i>e.g.</i> $2^{-31},$  then  no program running in that computer will be able
+ computer can hold (<i>e.g.</i> $2^{-31},$)  then  no program running in that computer will be able
  to distinguish data from
 the  perfectly dependent variables $S,T$   from 
  data from independent variables, $X,Y$!!!
