--- a/prob2_2025/cjoint.html
+++ b/prob2_2025/cjoint.html
@@ -934,9 +934,45 @@ Hence the theorem follows by continuity of probability.
 name="Problem set 8">Problem set 8</a></h2>
 
 <p>
-<b>EXERCISE 22:</b>&nbsp;Let $(X,Y)$  have joint CDF $F(x,y).$  Let $a_n\uparrow a$  and 
-$b_n\uparrow  b.$  Then show that 
-$$F(a,b)-F(a_n,b)-F(a,b_n)+F(a_n,b_n)\rightarrow P(X=a,\, Y=b).$$
+<b>EXERCISE 22:</b>&nbsp;Let $(X,Y)$  have joint CDF $F(x,y).$  Let $x_n\uparrow a$  and 
+$y_n\uparrow  b.$  Then is it true that $F(x_n,y_n)\uparrow F(a,b)$?
+</p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 23:</b>&nbsp;Let $(X,Y)$  have joint CDF $F(x,y).$
+Find 
+$\lim_{n\rightarrow \infty} F(x_n,y_n)$  in each of the following cases. Express the limit as the probability of some event
+ in terms of $X,Y$, whenever possible.
+<ol type="">
+
+<li>$x_n\rightarrow \infty, y_n\rightarrow \infty.$</li>
+
+<li>$x_n\rightarrow \infty, y_n\rightarrow -\infty.$</li>
+
+<li>$x_n\rightarrow -\infty, y_n\rightarrow -\infty.$</li>
+
+<li>$x_n\rightarrow -\infty, y_n\rightarrow \infty.$</li>
+
+<li>$x_n\equiv a, y_n\rightarrow \infty.$</li>
+
+<li>$x_n\equiv a, y_n\rightarrow -\infty.$</li>
+
+<li>$x_n\rightarrow \infty, y_n\equiv b.$</li>
+
+<li>$x_n\rightarrow -\infty, y_n\equiv b.$</li>
+
+<li>$x_n\uparrow a, y_n\uparrow b.$</li>
+
+<li>$x_n\downarrow a, y_n\uparrow b.$</li>
+
+<li>$x_n\uparrow a, y_n\downarrow b.$</li>
+
+<li>$x_n\downarrow a, y_n\downarrow b.$</li>
+
+</ol>
+
 </p>
 
 <h1><a
@@ -980,7 +1016,7 @@ A counterexample for the converse is discussed in the exercise below.
 name="Problem set 9">Problem set 9</a></h2>
 
 <p>
-<b>EXERCISE 23:</b>&nbsp;Let $X\sim Bernoulli\left(\frac 12\right)$  and $Y$ and density 
+<b>EXERCISE 24:</b>&nbsp;Let $X\sim Bernoulli\left(\frac 12\right)$  and $Y$ and density 
 $$f(x)=\left\{\begin{array}{ll}1&\text{if }x\in[0,1]\\ 0&\text{otherwise.}\end{array}\right.$$
 Let $X$  and $Y$   be independent random
  variables. Write down and sketch the CDFs $F_X(x)$  and $F_Y(y)$  of $X$  and $Y.$
@@ -1009,7 +1045,7 @@ class="ans" id="reason1">You can put rationals
  in the gaps.</div></blockquote>
 However, for bivariate or higher dimensional CDFs, the situation is drastically different. 
 <p>
-<b>EXERCISE 24:</b>&nbsp;
+<b>EXERCISE 25:</b>&nbsp;
 There are different ways to approach a point in ${\mathbb R}^2.$  The following diagram shows some of them. 
 <center>
 <table width="100%">
@@ -1032,23 +1068,23 @@ $P(X &lt; a,\, Y&lt; b)$, $P(X \leq a,\, Y&lt; b)$, $P(X &lt; a,\, Y\leq b)$  an
 <p></p>
 
 <p>
-<b>EXERCISE 25:</b>&nbsp;(Continuation of the last exercise) In exactly three of the cases above we must have
+<b>EXERCISE 26:</b>&nbsp;(Continuation of the last exercise) In exactly three of the cases above we must have
  $\lim_{(x,y)\rightarrow(a,b)} F(x,y) = F(a,b).$  Which three?</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 26:</b>&nbsp;(Continuation of the last exercise) Argue that $F(x,y)$  is discontinuous at
+<b>EXERCISE 27:</b>&nbsp;(Continuation of the last exercise) Argue that $F(x,y)$  is discontinuous at
  $(a,b)$  if and only if $P(X &lt; a,\, Y&lt; b) &lt; P(X \leq a,\, Y\leq b).$</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 27:</b>&nbsp;(Continuation of the last exercise) Argue that $F(x,y)$  is discontinuous at
+<b>EXERCISE 28:</b>&nbsp;(Continuation of the last exercise) Argue that $F(x,y)$  is discontinuous at
  $(a,b)$  if and only if $P(X \leq a,\, Y= b \mbox{ or }X = a,\, Y\leq b)&gt;0.$</p>
 
 <p>
-<b>EXERCISE 28:</b>&nbsp;(Continuation of the last exercise) Sketch the set $\{X \leq a,\, Y= b \mbox{ or }X = a,\, Y\leq b\}$  in the
+<b>EXERCISE 29:</b>&nbsp;(Continuation of the last exercise) Sketch the set $\{X \leq a,\, Y= b \mbox{ or }X = a,\, Y\leq b\}$  in the
  $XY$-plane for $(a,b) = (1,2)$  and also for $(a,b) = (1,3).$  Argue that either
  $F(x,y)$  has no discontinuity, or has
 uncountably many discontinuities.
@@ -1107,11 +1143,11 @@ Here, by the fundamental theorem of calculus,  $F_X'(x)  = \int_{-\infty}^\infty
 <h2><a
 name="Problem set 10">Problem set 10</a></h2>
 ::<p>
-<b>EXERCISE 29:</b>&nbsp;<font size="-2">[hpsjoint4.png]</font><img width="" src="image/hpsjoint4.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 30:</b>&nbsp;<font size="-2">[hpsjoint4.png]</font><img width="" src="image/hpsjoint4.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 30:</b>&nbsp;<font size="-2">[hpsjoint5.png]</font><img width="" src="image/hpsjoint5.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 31:</b>&nbsp;<font size="-2">[hpsjoint5.png]</font><img width="" src="image/hpsjoint5.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 31:</b>&nbsp;<font size="-2">[hpsjoint6.png]</font><img width="" src="image/hpsjoint6.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 32:</b>&nbsp;<font size="-2">[hpsjoint6.png]</font><img width="" src="image/hpsjoint6.png" style="vertical-align:text-top;"></p>
 
 <p></p>
 
@@ -1145,12 +1181,12 @@ However, if $(X,Y)$  has a joint density, then both $X$  and $Y$  must also have
 name="Problem set 11">Problem set 11</a></h2>
 
 <p>
-<b>EXERCISE 32:</b>&nbsp;If $X$  has density as above, then does $(X,X^2)$  have a joint density?</p>
+<b>EXERCISE 33:</b>&nbsp;If $X$  has density as above, then does $(X,X^2)$  have a joint density?</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 33:</b>&nbsp;Does there exist a CDF  such that if $X$  has that CDF, then $(X,X)$  has a joint density?</p>
+<b>EXERCISE 34:</b>&nbsp;Does there exist a CDF  such that if $X$  has that CDF, then $(X,X)$  has a joint density?</p>
 
 <p></p>
 
@@ -1209,31 +1245,31 @@ As in the discrete case, here also we have the result that if $X,Y$  are indepen
 name="Problem set 12">Problem set 12</a></h2>
 
 <p>
-<b>EXERCISE 34:</b>&nbsp;We toss two fair coins independently, and define 3 random variables $X,Y,Z$  based on
+<b>EXERCISE 35:</b>&nbsp;We toss two fair coins independently, and define 3 random variables $X,Y,Z$  based on
  the outcomes as follows. $X=1$  or $0$  according as the first toss shows head or not.
 Similarly, $Y=1$  or $0$  according as the second toss shows head or not. $Z=X$ if
  $Y=1$, else $Z=1-X.$  Show that $X,Y,Z$  are pairwise independent, but not mutually independent. 
 </p>
 
 <p>
-<b>EXERCISE 35:</b>&nbsp;If two independent random variables $X,Y$  have marginal densities $f(t) = e^{-\lambda t}$  for
+<b>EXERCISE 36:</b>&nbsp;If two independent random variables $X,Y$  have marginal densities $f(t) = e^{-\lambda t}$  for
  $t&gt;0$  (and 0 else), then find the joint density of $(X,Y).$</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 36:</b>&nbsp;$(X,Y)$  is distributed uniformly over the unit disc in ${\mathbb R}^2.$  Are $X,Y$  independent?</p>
+<b>EXERCISE 37:</b>&nbsp;$(X,Y)$  is distributed uniformly over the unit disc in ${\mathbb R}^2.$  Are $X,Y$  independent?</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 37:</b>&nbsp;If the joint density of $(X,Y)$  is of the form $f(x)g(y),$  then show that
+<b>EXERCISE 38:</b>&nbsp;If the joint density of $(X,Y)$  is of the form $f(x)g(y),$  then show that
  $X$  and $Y$  must be independent. Also show that $f_X\propto f$  and $f_Y\propto g.$</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 38:</b>&nbsp;If $(X,Y)$  are independent, then is it true that the joint CDF
+<b>EXERCISE 39:</b>&nbsp;If $(X,Y)$  are independent, then is it true that the joint CDF
 is the product of the marginal CDFs?
 </p>
 
@@ -1316,21 +1352,21 @@ name="Problem set 13">Problem set 13</a></h2>
 <p></p>
 
 <p>
-<b>EXERCISE 39:</b>&nbsp;If $(X,Y)$  is uniformly distributed over the triangle $\{(x,y)~:~0\leq x \leq y,\,
+<b>EXERCISE 40:</b>&nbsp;If $(X,Y)$  is uniformly distributed over the triangle $\{(x,y)~:~0\leq x \leq y,\,
  0\leq y\leq 1\}.$  Guess a conditional density of $X$  given $Y=y?$  First try
  to guess, and then check it from the definition.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 40:</b>&nbsp;Let $X|Y=y$  have density $f_{X|Y}(x,y) = \left\{\begin{array}{ll}c_y x^2&\text{if }x\in[0,y]\\
+<b>EXERCISE 41:</b>&nbsp;Let $X|Y=y$  have density $f_{X|Y}(x,y) = \left\{\begin{array}{ll}c_y x^2&\text{if }x\in[0,y]\\
  0&\text{otherwise.}\end{array}\right.$, where $c_y$  is free of $x.$ 
 Let $Y$  be uniformly distributed over $[0,1]$.  Find $f_{Y|X=x}(y,x).$</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 41:</b>&nbsp;If $(X,Y)$  has joint density $f(x,y)=\left\{\begin{array}{ll}x+y&\text{if }0\leq x,y\leq 1\\ 0&\text{otherwise.}\end{array}\right.,$
+<b>EXERCISE 42:</b>&nbsp;If $(X,Y)$  has joint density $f(x,y)=\left\{\begin{array}{ll}x+y&\text{if }0\leq x,y\leq 1\\ 0&\text{otherwise.}\end{array}\right.,$
 then find $E(X|Y=y)$  and $V(Y|X=x).$</p>
 
 <p></p>
@@ -1380,7 +1416,7 @@ Since this matrix is symmetric, hence the result.
 Obviously such brute force computation will be infeasible if the number of random variables increase. So you will need to
 proceed more systematically to answer the next problem.
 <p>
-<b>EXERCISE 42:</b>&nbsp;
+<b>EXERCISE 43:</b>&nbsp;
 We have $n$  balls $m$  of which are dark purple (the rest being of a nondescript colour). We draw an SRSWOR of
  $k$  balls. Let $X_i=$  the indicator of the $i$-th selected ball being dark purple. Show that $X_1,...,X_k$ 
  are exchangeable.
@@ -1389,7 +1425,7 @@ We have $n$  balls $m$  of which are dark purple (the rest being of a nondescrip
 <p></p>
 
 <p>
-<b>EXERCISE 43:</b>&nbsp;Consider Polya's urn scheme (5 black 5 white to start with, 1 ball drawn at each step,
+<b>EXERCISE 44:</b>&nbsp;Consider Polya's urn scheme (5 black 5 white to start with, 1 ball drawn at each step,
  replaced and 1 more ball of the observed colour added). Let $X_i=$ indicator of the
  $i$-th drawn ball being black. Show that $X_1,X_2,...,X_n$  are exchangeable for $n\in{\mathbb N}.$ </p>
 
@@ -1419,28 +1455,28 @@ Exchangeable random variables allow for symmetry arguments. The next problem is 
 name="Problem set 14">Problem set 14</a></h2>
 
 <p>
-<b>EXERCISE 44:</b>&nbsp;
+<b>EXERCISE 45:</b>&nbsp;
 If $X_1,...,X_n$  are exchangeable positive random variables with finite expectations,  then find $E((X_1+X_2)/(X_1+\cdots+X_n)).$
 </p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 45:</b>&nbsp;Three dice are rolled and their outcomes are called $X_1,X_2$   and $X_3.$  Let
+<b>EXERCISE 46:</b>&nbsp;Three dice are rolled and their outcomes are called $X_1,X_2$   and $X_3.$  Let
  $Y_1 = X_1+X_2,$  $Y_2 = X_2+X_3,$  and $Y_3 = X_3+X_1.$  Is $(Y_1,Y_2,Y_3)$ 
  exchangeable? Justify your answer.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 46:</b>&nbsp;A box contains 10 balls numbered 1 to 10. A ball is drawn at random, and its number noted.
+<b>EXERCISE 47:</b>&nbsp;A box contains 10 balls numbered 1 to 10. A ball is drawn at random, and its number noted.
  Without replacing the ball, another ball is drawn at random from the rest, and its number is also
  noted. If the two numbers are $X$  and $Y$, respectively, then is $(X,Y)$  exchangeable?</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 47:</b>&nbsp;(Continuation of the last exercise) Solve the last problem if at each step the ball with
+<b>EXERCISE 48:</b>&nbsp;(Continuation of the last exercise) Solve the last problem if at each step the ball with
  number $i$  on it  is selected with probability proportional to $i.$
 </p>
 
@@ -1449,41 +1485,41 @@ If $X_1,...,X_n$  are exchangeable positive random variables with finite expecta
 <h1><a
 name="Miscellaneous problems">Miscellaneous problems</a></h1>
 ::<p>
-<b>EXERCISE 48:</b>&nbsp;<font size="-2">[hpsjoint3.png]</font><img width="" src="image/hpsjoint3.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 49:</b>&nbsp;<font size="-2">[hpsjoint3.png]</font><img width="" src="image/hpsjoint3.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 49:</b>&nbsp;<font size="-2">[hpsjoint7.png]</font><img width="" src="image/hpsjoint7.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 50:</b>&nbsp;<font size="-2">[hpsjoint7.png]</font><img width="" src="image/hpsjoint7.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 50:</b>&nbsp;<font size="-2">[hpsjoint8.png]</font><img width="" src="image/hpsjoint8.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 51:</b>&nbsp;<font size="-2">[hpsjoint8.png]</font><img width="" src="image/hpsjoint8.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 51:</b>&nbsp;<font size="-2">[hpsjoint9.png]</font><img width="" src="image/hpsjoint9.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 52:</b>&nbsp;<font size="-2">[hpsjoint9.png]</font><img width="" src="image/hpsjoint9.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 52:</b>&nbsp;<font size="-2">[hpsjoint10.png]</font><img width="" src="image/hpsjoint10.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 53:</b>&nbsp;<font size="-2">[hpsjoint10.png]</font><img width="" src="image/hpsjoint10.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 53:</b>&nbsp;<font size="-2">[hpsjoint11.png]</font><img width="" src="image/hpsjoint11.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 54:</b>&nbsp;<font size="-2">[hpsjoint11.png]</font><img width="" src="image/hpsjoint11.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 54:</b>&nbsp;<font size="-2">[rossipmjoint1.png]</font><img width="" src="image/rossipmjoint1.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 55:</b>&nbsp;<font size="-2">[rossipmjoint1.png]</font><img width="" src="image/rossipmjoint1.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 55:</b>&nbsp;<font size="-2">[rossipmjoint2.png]</font><img width="" src="image/rossipmjoint2.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 56:</b>&nbsp;<font size="-2">[rossipmjoint2.png]</font><img width="" src="image/rossipmjoint2.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 56:</b>&nbsp;<font size="-2">[rossipmjoint3.png]</font><img width="" src="image/rossipmjoint3.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 57:</b>&nbsp;<font size="-2">[rossipmjoint3.png]</font><img width="" src="image/rossipmjoint3.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 57:</b>&nbsp;<font size="-2">[rossipmjoint4.png]</font><img width="" src="image/rossipmjoint4.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 58:</b>&nbsp;<font size="-2">[rossipmjoint4.png]</font><img width="" src="image/rossipmjoint4.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 58:</b>&nbsp;<font size="-2">[rossipmjoint5.png]</font><img width="" src="image/rossipmjoint5.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 59:</b>&nbsp;<font size="-2">[rossipmjoint5.png]</font><img width="" src="image/rossipmjoint5.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 59:</b>&nbsp;<font size="-2">[rossipmjoint6.png]</font><img width="" src="image/rossipmjoint6.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 60:</b>&nbsp;<font size="-2">[rossipmjoint6.png]</font><img width="" src="image/rossipmjoint6.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 60:</b>&nbsp;<font size="-2">[rossipmjoint8.png]</font><img width="" src="image/rossipmjoint8.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 61:</b>&nbsp;<font size="-2">[rossipmjoint8.png]</font><img width="" src="image/rossipmjoint8.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 61:</b>&nbsp;<font size="-2">[rossipmjoint9.png]</font><img width="" src="image/rossipmjoint9.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 62:</b>&nbsp;<font size="-2">[rossipmjoint9.png]</font><img width="" src="image/rossipmjoint9.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 62:</b>&nbsp;<font size="-2">[rossipmjoint10.png]</font><img width="" src="image/rossipmjoint10.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 63:</b>&nbsp;<font size="-2">[rossipmjoint10.png]</font><img width="" src="image/rossipmjoint10.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 63:</b>&nbsp;<font size="-2">[rossipmjoint11.png]</font><img width="" src="image/rossipmjoint11.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 64:</b>&nbsp;<font size="-2">[rossipmjoint11.png]</font><img width="" src="image/rossipmjoint11.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 64:</b>&nbsp;<font size="-2">[rossipmjoint12.png]</font><img width="" src="image/rossipmjoint12.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 65:</b>&nbsp;<font size="-2">[rossipmjoint12.png]</font><img width="" src="image/rossipmjoint12.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 65:</b>&nbsp;<font size="-2">[rossipmjoint13.png]</font><img width="" src="image/rossipmjoint13.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 66:</b>&nbsp;<font size="-2">[rossipmjoint13.png]</font><img width="" src="image/rossipmjoint13.png" style="vertical-align:text-top;"></p>
 <hr/>
 <table width="100%" border="0">
 <tr>
