--- a/prob2_2025/contabs.html
+++ b/prob2_2025/contabs.html
@@ -743,11 +743,11 @@ If <font size="+1" color="red"><code>n</code></font>  is large enough (say at le
   or <font size="+1" color="red"><code>.mp3</code></font>  extension).  If you cannot record yourself, you may use this hardly audible audio file <a href="test.wav">test.wav</a>  of me rubbing my hands together. Download it your machine. Load it using R:
 <font color="red">
 <pre>
-install.packages('tuneR') #You need to do this only once.
+install.packages('tuneR') #You need to do this only once (with net connection)
 library(tuneR)
 dat = readWave('test.wav') #You may need to give the entire path of the file
 hist(dat@left,probability=TRUE)
-hist(dat@left,breaks=20,probability=TRUE) #finer histogram
+hist(dat@left,breaks=200,probability=TRUE) #finer histogram
 </pre>
 </font>
 
