--- a/prob2_2025/contabs.html
+++ b/prob2_2025/contabs.html
@@ -457,7 +457,7 @@ Consider a density with a graph as shown below.
 <center>
 <table width="100%">
 <tr>
-<th><img width="" src="image/densunb.png"></th>
+<th><img width="" src="image/lunb.png"></th>
 </tr>
 <tr>
 <th></th>
@@ -927,7 +927,10 @@ name="Problem set 9">Problem set 9</a></h2>
 ::<p>
 <b>EXERCISE 41:</b>&nbsp;<font size="-2">[rosspdf29.png]</font><img width="" src="image/rosspdf29.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 42:</b>&nbsp;<font size="-2">[rosspdf39.png]</font><img width="" src="image/rosspdf39.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 42:</b>&nbsp;<font size="-2">[rosspdf39.png]</font><img width="" src="image/rosspdf39.png" style="vertical-align:text-top;">
+<p></p>
+You may like to use the result $\int_0^\infty e^{-x^2/2}, dx = \sqrt{\frac \pi2}.$
+</p>
 ::<p>
 <b>EXERCISE 43:</b>&nbsp;<font size="-2">[rosspdf40.png]</font><img width="" src="image/rosspdf40.png" style="vertical-align:text-top;"></p>
 
