--- a/prob2_2025/cjoint.html
+++ b/prob2_2025/cjoint.html
@@ -215,7 +215,7 @@ function myFunction() {
 <a href="#Problem set 8">Problem set 8</a>
 </li>
 <li>
-<a href="#A difference between univariate and joint CDF">A difference between univariate and joint CDF</a>
+<a href="#Univariate vs multivariate CDF">Univariate vs multivariate CDF</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 9">Problem set 9</a>
@@ -976,7 +976,9 @@ $\lim_{n\rightarrow \infty} F(x_n,y_n)$  in each of the following cases. Express
 </p>
 
 <h1><a
-name="A difference between univariate and joint CDF">A difference between univariate and joint CDF</a></h1>
+name="Univariate vs multivariate CDF">Univariate vs multivariate CDF</a></h1>
+<a href="https://youtu.be/uk4u5koiPr0">Video for this section</a>
+<p></p>
 Let $X$  be a random variable with CDF $F.$  Then the following two statements are equivalent:
 <ol type="">
 
@@ -1094,9 +1096,11 @@ uncountably many discontinuities.
 
 <h1><a
 name="Marginals">Marginals</a></h1>
+<a href="https://youtu.be/SABBZjtYCE8">Video for this section</a>
+<p></p>
 We can find the distribution of $X$  and $Y$  separately given the joint distribution of $(X,Y).$  
 The distributions of $X$  and $Y$  separately are called their <b><font color="red" size="40">marginal</font></b> 
- distributions. The term "marginal" is actually redundant "distribution of $X$ " is the same
+ distributions. The term "marginal" is actually redundant. "Distribution of $X$ " is the same
  as "marginal distribution of $X$ ". The term is used just to contrast with "joint".  
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
