--- a/prob2_2025/cjoint.html
+++ b/prob2_2025/cjoint.html
@@ -227,7 +227,7 @@ function myFunction() {
 <a href="#Problem set 10">Problem set 10</a>
 </li>
 <li>
-<a href="#Marginal densities $\not\Rightarrow$  joint density">Marginal densities $\not\Rightarrow$  joint density</a>
+<a href="#A subtle difference between joint PDF and PMF">A subtle difference between joint PDF and PMF</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 11">Problem set 11</a>
@@ -239,16 +239,25 @@ function myFunction() {
 <a href="#Problem set 12">Problem set 12</a>
 </li>
 <li>
-<a href="#Conditional distribution">Conditional distribution</a>
+<a href="#Expectation using joint density">Expectation using joint density</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Independence">Independence</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 13">Problem set 13</a>
 </li>
 <li>
-<a href="#Exchangeable distribution">Exchangeable distribution</a>
+<a href="#Conditional distribution">Conditional distribution</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 14">Problem set 14</a>
+</li>
+<li>
+<a href="#Exchangeable distribution">Exchangeable distribution</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 15">Problem set 15</a>
 </li>
 <li>
 <a href="#Miscellaneous problems">Miscellaneous problems</a>
@@ -1162,7 +1171,9 @@ name="Problem set 10">Problem set 10</a></h2>
 <p></p>
 
 <h1><a
-name="Marginal densities $\not\Rightarrow$  joint density">Marginal densities $\not\Rightarrow$  joint density</a></h1>
+name="A subtle difference between joint PDF and PMF">A subtle difference between joint PDF and PMF</a></h1>
+<a href="https://youtu.be/srZbN5JKwDE">Video for this section</a>
+<p></p>
 Note that if $X$  and $Y$  are jointly distributed discrete random variables, then immediatly we are assured of
 having their joint PMF. But not so in case of densities. Even if
  $X$  and $Y$  each has its own density, still $(X,Y)$  may fail to have a
@@ -1202,6 +1213,8 @@ name="Problem set 11">Problem set 11</a></h2>
 
 <h1><a
 name="Independence">Independence</a></h1>
+<a href="https://youtu.be/MYxgNQkhVhY">Video for this section</a>
+<p></p>
 We already know the following general definition of  jointly distributed random variables being independent:
 <fieldset>
 <legend><b>Definition: Independence</b></legend>
@@ -1283,6 +1296,92 @@ Similarly, $Y=1$  or $0$  according as the second toss shows head or not. $Z=X$ 
 is the product of the marginal CDFs?
 </p>
 
+<p></p>
+
+<p>
+<b>EXERCISE 40:</b>&nbsp;Let $(X,Y)$  have joint density $f(x,y) = g(x) h(y),$  where $g(\cdot)$  and
+ $h(\cdot)$  are not necessarily density functions. Find margial densities of $X$  and
+ $Y$, and show that $X$  and $Y$  must be independent.</p>
+
+<p></p>
+
+<h1><a
+name="Expectation using joint density">Expectation using joint density</a></h1>
+Suppose $X,Y$  are jointly  distributed. We often need to find the expectation of $h(X,Y)$  for some given function
+ $h(x,y).$  For this we can of course employ the definition by first defining a new random
+ variable,  $Z=h(X,Y)$. This will take us back to the univariate set up, that we already know to handle. But often a
+But a simpler alternative exists. 
+<fieldset>
+<legend><b><i>Theorem</i></b></legend>
+Let $(X,Y)$  have joint density $f(x,y).$  If $h(X,Y)$  is a non-negative random variable, then 
+$$E(h(X,Y)) = \int_{-\infty}^\infty\int_{-\infty}^\infty h(x,y)\, dx\,dy.$$
+This always exists (though may be $\infty$). 
+</fieldset>
+This theorem is the obvious generalisation of the univatiate density case, and like that will be proved once we learn about
+ Lebesgue integral later in this course. If $h(X,Y)$  can take both positive and negative values, then we proceed in
+ the usual way.
+<fieldset>
+<legend><b><i>Theorem</i></b></legend>
+Let $(X,Y)$  have joint density $f(x,y).$  Let $h(X,Y)$  be a random variable. Let 
+$$\begin{eqnarray*}
+h(x,y)_+ &amp; = &amp; \max\{h(x,y),0\},\\
+h(x,y)_- &amp; = &amp; \max\{-h(x,y),0\}.
+\end{eqnarray*}$$ 
+Then
+$$E(h(X,Y)) = E(h(X,Y)_+)-E(h(X,Y)_-),$$
+unless both the expectation on the rhs are $\infty$, in which case $E(h(X,Y))$  is undefined.
+</fieldset>
+
+<p>
+<b><i>Proof:</i></b>
+This follows immediately from the general definition of expectation.
+<b><i>[QED]</i></b>
+</p>
+
+<p></p>
+Again, as in univriate density case, we have a simpler formula for the special case where $E(|h(X,Y)|) &lt; \infty.$
+<fieldset>
+<legend><b><i>Theorem</i></b></legend>
+Let $(X,Y)$  have joint density $f(x,y).$  If $h(X,Y)$  is a  random variable with $E(|h(X,Y)|) &lt; \infty$,, then 
+$$E(h(X,Y)) = \int_{-\infty}^\infty\int_{-\infty}^\infty h(x,y)\, dx\,dy.$$
+This must be finite.
+</fieldset>
+
+<p></p>
+
+<h2><a
+name="Independence">Independence</a></h2>
+
+<fieldset>
+<legend><b><i>Theorem</i></b></legend>If $X,Y$  are independent, and $E(X)$, $E(Y)$  both are finite, then
+ $E(XY)$  must also be finite, and $E(XY)=E(X)E(Y).$</fieldset>
+
+<p>
+<b><i>Proof:</i></b>The result in generally true for any random variables, whether or not densities exist. Indeed,
+ we have already encountered and proved the result for simle random variables in our Probability I
+ course. Here we shall learn the proof in the case when $X$  and $Y$  both have
+ densities, $f_X(x)$  and $f_Y(y)$, say. 
+<p></p>
+Since $X,Y$  are independent, then $(X,Y)$  has joint density
+$$f(x,y) = f_X(x)f_Y(y).$$
+So $E(XY) = \int_{-\infty}^\infty\int_{-\infty}^\inftyxy f(x,y)\, dx\, dy = \int_{-\infty}^\infty\int_{-\infty}^\inftyxy f_X(x)f_Y(y)\, dx\, dy = \int_{-\infty}^\infty xf_X(x)\,dx\int_{-\infty}^\infty y f_Y(y)\, dy = E(X)E(Y),$
+as required.
+<b><i>[QED]</i></b>
+</p>
+Two points to be noted about this theorem:
+<ol type="">
+<li>The converse is not true. We have seen counterexamples even in the simple case.</li>
+
+<li>If $X,Y$  are jointly distributed, and both $E(X)$  and $E(Y)$  are finite,
+ even then $E(XY)$  may fail to be finite, or even exist. The exercises below will give some counterexamples.</li>
+
+</ol>
+
+<p></p>
+
+<h2><a
+name="Problem set 13">Problem set 13</a></h2>
+
 <h1><a
 name="Conditional distribution">Conditional distribution</a></h1>
 So far distributions with densities  behave very similarly to the discrete distributions, with integration replacing summation.  
@@ -1357,26 +1456,26 @@ as required.
 </p>
 
 <h2><a
-name="Problem set 13">Problem set 13</a></h2>
+name="Problem set 14">Problem set 14</a></h2>
 
 <p></p>
 
 <p>
-<b>EXERCISE 40:</b>&nbsp;If $(X,Y)$  is uniformly distributed over the triangle $\{(x,y)~:~0\leq x \leq y,\,
+<b>EXERCISE 41:</b>&nbsp;If $(X,Y)$  is uniformly distributed over the triangle $\{(x,y)~:~0\leq x \leq y,\,
  0\leq y\leq 1\}.$  Guess a conditional density of $X$  given $Y=y?$  First try
  to guess, and then check it from the definition.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 41:</b>&nbsp;Let $X|Y=y$  have density $f_{X|Y}(x,y) = \left\{\begin{array}{ll}c_y x^2&\text{if }x\in[0,y]\\
+<b>EXERCISE 42:</b>&nbsp;Let $X|Y=y$  have density $f_{X|Y}(x,y) = \left\{\begin{array}{ll}c_y x^2&\text{if }x\in[0,y]\\
  0&\text{otherwise.}\end{array}\right.$, where $c_y$  is free of $x.$ 
 Let $Y$  be uniformly distributed over $[0,1]$.  Find $f_{Y|X=x}(y,x).$</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 42:</b>&nbsp;If $(X,Y)$  has joint density $f(x,y)=\left\{\begin{array}{ll}x+y&\text{if }0\leq x,y\leq 1\\ 0&\text{otherwise.}\end{array}\right.,$
+<b>EXERCISE 43:</b>&nbsp;If $(X,Y)$  has joint density $f(x,y)=\left\{\begin{array}{ll}x+y&\text{if }0\leq x,y\leq 1\\ 0&\text{otherwise.}\end{array}\right.,$
 then find $E(X|Y=y)$  and $V(Y|X=x).$</p>
 
 <p></p>
@@ -1426,7 +1525,7 @@ Since this matrix is symmetric, hence the result.
 Obviously such brute force computation will be infeasible if the number of random variables increase. So you will need to
 proceed more systematically to answer the next problem.
 <p>
-<b>EXERCISE 43:</b>&nbsp;
+<b>EXERCISE 44:</b>&nbsp;
 We have $n$  balls $m$  of which are dark purple (the rest being of a nondescript colour). We draw an SRSWOR of
  $k$  balls. Let $X_i=$  the indicator of the $i$-th selected ball being dark purple. Show that $X_1,...,X_k$ 
  are exchangeable.
@@ -1435,7 +1534,7 @@ We have $n$  balls $m$  of which are dark purple (the rest being of a nondescrip
 <p></p>
 
 <p>
-<b>EXERCISE 44:</b>&nbsp;Consider Polya's urn scheme (5 black 5 white to start with, 1 ball drawn at each step,
+<b>EXERCISE 45:</b>&nbsp;Consider Polya's urn scheme (5 black 5 white to start with, 1 ball drawn at each step,
  replaced and 1 more ball of the observed colour added). Let $X_i=$ indicator of the
  $i$-th drawn ball being black. Show that $X_1,X_2,...,X_n$  are exchangeable for $n\in{\mathbb N}.$ </p>
 
@@ -1462,31 +1561,31 @@ Then the joint CDF of $(X_{i_1},...,X_{i_k})$  is $F(x_1,...,x_k,\infty,...,\inf
 <p></p>
 Exchangeable random variables allow for symmetry arguments. The next problem is one example. 
 <h2><a
-name="Problem set 14">Problem set 14</a></h2>
+name="Problem set 15">Problem set 15</a></h2>
 
 <p>
-<b>EXERCISE 45:</b>&nbsp;
+<b>EXERCISE 46:</b>&nbsp;
 If $X_1,...,X_n$  are exchangeable positive random variables with finite expectations,  then find $E((X_1+X_2)/(X_1+\cdots+X_n)).$
 </p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 46:</b>&nbsp;Three dice are rolled and their outcomes are called $X_1,X_2$   and $X_3.$  Let
+<b>EXERCISE 47:</b>&nbsp;Three dice are rolled and their outcomes are called $X_1,X_2$   and $X_3.$  Let
  $Y_1 = X_1+X_2,$  $Y_2 = X_2+X_3,$  and $Y_3 = X_3+X_1.$  Is $(Y_1,Y_2,Y_3)$ 
  exchangeable? Justify your answer.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 47:</b>&nbsp;A box contains 10 balls numbered 1 to 10. A ball is drawn at random, and its number noted.
+<b>EXERCISE 48:</b>&nbsp;A box contains 10 balls numbered 1 to 10. A ball is drawn at random, and its number noted.
  Without replacing the ball, another ball is drawn at random from the rest, and its number is also
  noted. If the two numbers are $X$  and $Y$, respectively, then is $(X,Y)$  exchangeable?</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 48:</b>&nbsp;(Continuation of the last exercise) Solve the last problem if at each step the ball with
+<b>EXERCISE 49:</b>&nbsp;(Continuation of the last exercise) Solve the last problem if at each step the ball with
  number $i$  on it  is selected with probability proportional to $i.$
 </p>
 
@@ -1495,41 +1594,41 @@ If $X_1,...,X_n$  are exchangeable positive random variables with finite expecta
 <h1><a
 name="Miscellaneous problems">Miscellaneous problems</a></h1>
 ::<p>
-<b>EXERCISE 49:</b>&nbsp;<font size="-2">[hpsjoint3.png]</font><img width="" src="image/hpsjoint3.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 50:</b>&nbsp;<font size="-2">[hpsjoint3.png]</font><img width="" src="image/hpsjoint3.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 50:</b>&nbsp;<font size="-2">[hpsjoint7.png]</font><img width="" src="image/hpsjoint7.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 51:</b>&nbsp;<font size="-2">[hpsjoint7.png]</font><img width="" src="image/hpsjoint7.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 51:</b>&nbsp;<font size="-2">[hpsjoint8.png]</font><img width="" src="image/hpsjoint8.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 52:</b>&nbsp;<font size="-2">[hpsjoint8.png]</font><img width="" src="image/hpsjoint8.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 52:</b>&nbsp;<font size="-2">[hpsjoint9.png]</font><img width="" src="image/hpsjoint9.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 53:</b>&nbsp;<font size="-2">[hpsjoint9.png]</font><img width="" src="image/hpsjoint9.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 53:</b>&nbsp;<font size="-2">[hpsjoint10.png]</font><img width="" src="image/hpsjoint10.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 54:</b>&nbsp;<font size="-2">[hpsjoint10.png]</font><img width="" src="image/hpsjoint10.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 54:</b>&nbsp;<font size="-2">[hpsjoint11.png]</font><img width="" src="image/hpsjoint11.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 55:</b>&nbsp;<font size="-2">[hpsjoint11.png]</font><img width="" src="image/hpsjoint11.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 55:</b>&nbsp;<font size="-2">[rossipmjoint1.png]</font><img width="" src="image/rossipmjoint1.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 56:</b>&nbsp;<font size="-2">[rossipmjoint1.png]</font><img width="" src="image/rossipmjoint1.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 56:</b>&nbsp;<font size="-2">[rossipmjoint2.png]</font><img width="" src="image/rossipmjoint2.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 57:</b>&nbsp;<font size="-2">[rossipmjoint2.png]</font><img width="" src="image/rossipmjoint2.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 57:</b>&nbsp;<font size="-2">[rossipmjoint3.png]</font><img width="" src="image/rossipmjoint3.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 58:</b>&nbsp;<font size="-2">[rossipmjoint3.png]</font><img width="" src="image/rossipmjoint3.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 58:</b>&nbsp;<font size="-2">[rossipmjoint4.png]</font><img width="" src="image/rossipmjoint4.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 59:</b>&nbsp;<font size="-2">[rossipmjoint4.png]</font><img width="" src="image/rossipmjoint4.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 59:</b>&nbsp;<font size="-2">[rossipmjoint5.png]</font><img width="" src="image/rossipmjoint5.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 60:</b>&nbsp;<font size="-2">[rossipmjoint5.png]</font><img width="" src="image/rossipmjoint5.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 60:</b>&nbsp;<font size="-2">[rossipmjoint6.png]</font><img width="" src="image/rossipmjoint6.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 61:</b>&nbsp;<font size="-2">[rossipmjoint6.png]</font><img width="" src="image/rossipmjoint6.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 61:</b>&nbsp;<font size="-2">[rossipmjoint8.png]</font><img width="" src="image/rossipmjoint8.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 62:</b>&nbsp;<font size="-2">[rossipmjoint8.png]</font><img width="" src="image/rossipmjoint8.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 62:</b>&nbsp;<font size="-2">[rossipmjoint9.png]</font><img width="" src="image/rossipmjoint9.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 63:</b>&nbsp;<font size="-2">[rossipmjoint9.png]</font><img width="" src="image/rossipmjoint9.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 63:</b>&nbsp;<font size="-2">[rossipmjoint10.png]</font><img width="" src="image/rossipmjoint10.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 64:</b>&nbsp;<font size="-2">[rossipmjoint10.png]</font><img width="" src="image/rossipmjoint10.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 64:</b>&nbsp;<font size="-2">[rossipmjoint11.png]</font><img width="" src="image/rossipmjoint11.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 65:</b>&nbsp;<font size="-2">[rossipmjoint11.png]</font><img width="" src="image/rossipmjoint11.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 65:</b>&nbsp;<font size="-2">[rossipmjoint12.png]</font><img width="" src="image/rossipmjoint12.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 66:</b>&nbsp;<font size="-2">[rossipmjoint12.png]</font><img width="" src="image/rossipmjoint12.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 66:</b>&nbsp;<font size="-2">[rossipmjoint13.png]</font><img width="" src="image/rossipmjoint13.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 67:</b>&nbsp;<font size="-2">[rossipmjoint13.png]</font><img width="" src="image/rossipmjoint13.png" style="vertical-align:text-top;"></p>
 <hr/>
 <table width="100%" border="0">
 <tr>
