--- a/prob2_2025/contabs.html
+++ b/prob2_2025/contabs.html
@@ -644,8 +644,15 @@ State true or false: if $f(x)$  is a density, and $g(x)$  is obtained by changin
 
 <p>
 <b>EXERCISE 23:</b>&nbsp;In this problem we shall say that a density  $f$ "sits on"  an interval
- $I$  if<blockquote> $\forall
- x\in I~~f(x)&gt;0$  and $f(x)$  vanishes outside $I.$</blockquote>
+ $I$  if all the three conditions hold:
+<ul>
+<li> $\forall
+ x\in I~~f(x)&gt;0$</li>
+
+<li>$f(x)$  vanishes outside $I.$</li>
+
+<li>$f$  is continuous on $I$.</li>
+</ul>
   Let $f,g$  be two densities
  for the same distribution. If $f$  "sits on"an interval  $I$  and $g$  "sits on"
  an interval $J$, then show that the closure if $I$  and $J$   must match. (This closure is called the
