--- a/prob2_2025/cjoint.html
+++ b/prob2_2025/cjoint.html
@@ -484,7 +484,7 @@ If $f:{\mathbb R}^2\rightarrow[0,\infty)$  is  joint density of some $(X,Y)$, th
 <b>EXAMPLE 6:</b>&nbsp;Find $c\in{\mathbb R}$  such that $f(x,y) =\left\{\begin{array}{ll}c(x+y)&\text{if }0\leq x,y,\leq 2\\ 0&\text{otherwise.}\end{array}\right. $  is a density.
 <p></p>
 <b>SOLUTION:</b>
-We need $\int_{-\infty}^\infty\int_{-\infty}^\inftyf(x,y)\, dx dy = 1,$  <i>i.e.</i>, 
+We need $\int_{-\infty}^\infty\int_{-\infty}^\infty f(x,y)\, dx dy = 1,$  <i>i.e.</i>, 
 $$\int_0^2\int_0^2 c(x+y)\, dx dy = 1.$$
 Now
 $$\int_0^2\int_0^2 c(x+y)\, dx dy = c\int_0^2\left[\int_0^2 c(x+y)\, dx\right] dy = c\int_0^2\left[ \frac 12x^2+xy\right]_0^2 dy=c\int_0^2( 2+2y)\, dy=8c.$$
@@ -1374,7 +1374,8 @@ name="Independence">Independence</a></h2>
 <p></p>
 Since $X,Y$  are independent, then $(X,Y)$  has joint density
 $$f(x,y) = f_X(x)f_Y(y).$$
-So $E(XY) = \int_{-\infty}^\infty\int_{-\infty}^\inftyxy f(x,y)\, dx\, dy = \int_{-\infty}^\infty\int_{-\infty}^\inftyxy f_X(x)f_Y(y)\, dx\, dy = \int_{-\infty}^\infty xf_X(x)\,dx\int_{-\infty}^\infty y f_Y(y)\, dy = E(X)E(Y),$
+So $E(XY) = \int_{-\infty}^\infty\int_{-\infty}^\infty xy f(x,y)\, dx\, dy =
+ \int_{-\infty}^\infty\int_{-\infty}^\infty xy f_X(x)f_Y(y)\, dx\, dy = \int_{-\infty}^\infty xf_X(x)\,dx\int_{-\infty}^\infty y f_Y(y)\, dy = E(X)E(Y),$
 as required.
 <b><i>[QED]</i></b>
 </p>
