--- a/prob2_2025/contabs.html
+++ b/prob2_2025/contabs.html
@@ -806,7 +806,7 @@ $$\lim_{\epsilon\rightarrow0+}\frac{P[2,2+\epsilon)}{\epsilon} = e^{-2}.$$
 
 <p>
 <b>EXERCISE 29:</b>&nbsp;
-If $X$  has density $f(x)$  which is continuous at $x=a,$  then prove that
+If $X$  has density $f(x)$  which is continuous over a neighbourhood of $x=a,$  then prove that
 $$\lim_{\epsilon\rightarrow0+}\frac{P(a-\epsilon,a+\epsilon)}{2 \epsilon} = f(a).$$
 Can you drop the continuity assumption?
 </p>
